@@ -232,6 +232,9 @@ IMPROVEMENTS:
   in order to get rid of the intermediate shell process
   (Roman Shaposhnik via phunt)
 
+  ZOOKEEPER-1161. Provide an option for disabling auto-creation of the data directory 
+  (phunt via henry)
+
 
 Release 3.4.0 - 
 
